syntax = "proto3";

package replication;
option go_package = "../internal/service/storage/replication";
import "google/protobuf/wrappers.proto";

message SegmentRequest {
  google.protobuf.StringValue last_name = 1;
}

message SegmentResponse {
  google.protobuf.StringValue name = 1;
  bytes data = 2;
}